--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "ideaspark",
   "version": "1.0.0",
@@ -7,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^10.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
