--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "builds": [{ "src": "index.html", "use": "@vercel/static-build", "config": { "distDir": "dist" } }],
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
